fixed sauce-labs dropdown from hiding behind test-runner

--- a/app/css/pages/tests/_runnables.scss
+++ b/app/css/pages/tests/_runnables.scss
@@ -22,6 +22,7 @@
     width: 100%;
     overflow: auto;
     padding-bottom: 30px;
+    border-top: 1px solid #ddd;
 
     #specs-region {
       height: 100%;
